<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioGroupOrderBy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"/>
    <RadioGroup
        android:id="@+id/orderByGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioTitle"/>
        <RadioButton
            android:id="@+id/radioKitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioKitchen"/>
        <RadioButton
            android:id="@+id/radioCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioCourse"/>
        <RadioButton
            android:id="@+id/radioMaxPreperationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioMaxPreperationTime"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioGroupIncreaseDecrease"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"/>
    <RadioGroup
        android:id="@+id/increaseGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioIncrease"/>

        <RadioButton
            android:id="@+id/radioDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioDecrease"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bCancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bOrder"
            android:text="@string/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>